<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obca_planner</name>
  <version>0.0.0</version>
  <description>OBCA Planner</description>
  <maintainer email="lxq243808918@gmail.com">stephen_li</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
